@@ -2,7 +2,21 @@ package org.hick.blah;
 
 public class SqueezeBox
 {
+   public static String aStringField = "this is a string field";
+   public static double aDoubleField = 3.0;
+
+   public String  instanceStringField  = "this is also a string field";
+   public boolean instanceBooleanField = true;
+
    protected int sq = 33;
+
+   public void printValues()
+   {
+      System.out.println("static members:");
+      System.out.println("aStringField '" + aStringField + "' and aDoubleField = " + aDoubleField);
+      System.out.println("instance members:");
+      System.out.println("instanceStringField '" + instanceStringField + "' instanceBooleanField = " + instanceBooleanField);
+   }
 
    public int squeeze()
    { 
