@@ -1,3 +1,3 @@
-(1) Checksum value of test.jar is: 990741747 good? yes
-(2) Checksum value of test.jar is: 990741747 good? yes
-Checksum of written data is: 990741747
+(1) Checksum value of test.jar is: 453947233 good? yes
+(2) Checksum value of test.jar is: 453947233 good? yes
+Checksum of written data is: 453947233
