@@ -1,0 +1,2 @@
+Error: jar file to import package from was not found! at line 5
+       import org.hick.blah.SqueezeBox from: tests/data/test.jar
